[tool.poetry]
name = "gable-tutorial"
version = "0.1.0"
description = ""
authors = ["Daniel Dicker <daniel.dicker@gmail.com>"]
readme = "README.md"
packages = [{include = "gable_tutorial"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.8"
sqlalchemy = "^2.0.21"
gable = "^0.3.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
